feat(driver): Made Permission User/Group immutable